----------
v4.0.0-git
----------

[jan] Fix exporting from browse view (Bug #11526).
[jan] Return to the same page after running actions from the browse view.


-----------
v4.0.0beta3
-----------

[jan] Support importing contacts via API if using 'emails' attributes (Bug
      #8358).
[jan] Support 'emails' attribute with ActiveSync.
[jan] Fix marking contacts as deleted in the history if deleting shared address
      books (Bug #11480).
[jan] Set gender field values literally to 'male' or 'female'.
[jan] Drop preference which address books to display.
[gwr] Mark the initial default share as such with the Kolab backend.
[gwr] Always mark the initial share as default addressbook.
[mms] Initial implementation of smartmobile view.


-----------
v4.0.0beta2
-----------

[jan] Use Horde 5 action bar.


-----------
v4.0.0beta1
-----------

[jan] Add configuration example for Kolab/IMAP address books.
[jan] Update icon set.
[jan] Fix searching multiple names via the API.
[jan] Fix searching and listing clients via the API.


------------
v4.0.0alpha1
------------

First alpha release for Horde 5.
[mms] Import API call now throws an ObjectExists exception when a duplicate is
      found.
[jan] Add parameters to specify field size of phone and email fields.


-----------
v3.0.15-git
-----------

[mms] Fix infinite loop if array was passed to delete API call.
[mms] Fix descending sorting of result lists.
[mms] Return to same page when deleting contact from browse view.
[mjr] Add ability to return count of objects matching search in place of full
      result set.
[jan] Update Turkish translation (İstanbul Technical University).
[jan] Fix strict searching in favourites driver (Bug #11207).


-------
v3.0.14
-------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[jan] Update Italian translation (Emilien <emilien@wifi.e4a.it>).
[jan] Fix number of contacts in a list that cannot be displayed.
[jan] Update Slovak translation (Marika Schvarczova