@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Attach share owner to all address book titles (Bug #11528).
 * [jan] Fix exporting from browse view (Bug #11526).
 * [jan] Return to the same page after running actions from the browse view.
  </notes>
@@ -1483,6 +1484,7 @@
    <date>2012-10-16</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Attach share owner to all address book titles (Bug #11528).
 * [jan] Fix exporting from browse view (Bug #11526).
 * [jan] Return to the same page after running actions from the browse view.
    </notes>
