@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[jan] Attach share owner to all address book titles (Bug #11528).
 [jan] Fix exporting from browse view (Bug #11526).
 [jan] Return to the same page after running actions from the browse view.
 
